Fix smooth scrolling on mobile

--- a/src/app/components/typer/typer.component.scss
+++ b/src/app/components/typer/typer.component.scss
@@ -389,4 +389,8 @@ $word-spacing: 20px;
     font-size: 2em;
     padding-right: 10px;
   }
+
+  .word-copy {
+    font-size: 2em;
+  }
 }
